<resources>
    <string name="app_name">万运通收货人版</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Login">登录</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="shouye">首页</string>
    <string name="setting">设置</string>
    <string name="change_psd">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="service_tiaokuan">服务条款</string>
    <string name="login_subtext">万运通\t行天下</string>
    <string name="forget_psd">忘记密码</string>
    <string name="againset_psd">重置密码</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_psd">请输入密码</string>
    <string name="please_input_psd_again">请再次输入密码</string>
    <string name="please_input_authcode">请输入验证码</string>
    <string name="get_authcode">获取验证码</string>
    <string name="confirm">确认</string>
    <string name="action_msg">消息</string>
    <string name="shaixuan">筛选</string>
    <string name="luxian">路线</string>
    <string name="carneed">车型需求</string>
    <string name="product">货物</string>
    <string name="tihuo_time">预计提货时间</string>
    <string name="weizhi">实时位置</string>
    <string name="xingshiguiji">行驶轨迹</string>
    <string name="zhuangtaigenzong">状态跟踪</string>
    <string name="qianshou">签收</string>
    <string name="order_genzong">订单跟踪</string>
    <string name="signno1">签收单号:</string>
    <string name="product_company">货主公司:</string>
    <string name="shouhuofang">收货方:</string>
    <string name="address">地址:</string>
    <string name="linkpersonal">联系人:</string>
    <string name="linkphone">联系电话:</string>
    <string name="contractno">合同号:</string>
    <string name="product_name">货物名称:</string>
    <string name="product_guige">货物规格:</string>
    <string name="product_num">件数:</string>
    <string name="sys_num">法定数量:</string>
    <string name="transaction_num">成交数量:</string>
    <string name="chengyunfang">承运方:</string>
    <string name="siji">司机:</string>
    <string name="chepaihao">车牌号:</string>
    <string name="fayun_date">发运日期:</string>
    <string name="next">下一步</string>
    <string name="jianshuxiangfu">件数相符</string>
    <string name="baozhuangwanhao">包装完好</string>
    <string name="fou">否</string>
    <string name="shi">是</string>
    <string name="beizhu">备注</string>
    <string name="zhuyishixiang">注意事项</string>
    <string name="zhuyishixiangdetails">1、"货运电子签收单"在收货方签收完成后将作为与货主公司的结算依据。\n2、"货运电子签收单"作为收货凭证，必须由收货方确认签收。\n3、请收货方在确认货物无损，数/重量无误后，进行签收确认。</string>
    <string name="qianzigaizhang">收货方签字盖章</string>
    <string name="sign_yinzhang">电子签名或印章</string>
    <string name="shouhuoriqi">收货日期</string>
    <string name="qianshoudan">签收单</string>
    <string name="saomiao">扫描</string>
    <string name="cancal">取消</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="PROMPT_PSD_FORMAT_IS_NOT_TRUE">密码格式不正确</string>
    <string name="MAKETRUE_PSD_IS_SUCCESS">请确认密码是否相同</string>
    <string name="PROMPT_AUTHCODE_IS_NOT_EMPTY">验证码不能为空</string>
    <string name="new_version">当前版本</string>
    <string name="PROMPT_PHONE_FORMAT_IS_NOT_TRUE">手机号不正确</string>
    <string name="historyorder">历史订单</string>
    <string name="select_time">选择时间</string>
    <string name="zhi">至</string>
    <string name="start_time">起始日期</string>
    <string name="end_time">结束日期</string>
    <string name="action_search">搜索</string>
    <string name="please_input_search_text">输入搜索内容</string>
    <string name="PLEASE_INPUT_USERACT">请输入账号</string>
    <string name="login_error">登录信息有误</string>
    <string name="HAS_SEND_TO">已发送</string>
    <string name="CHANGE_SUCCESS">修改成功</string>
    <string name="huozhu">货主</string>
    <string name="wan">完</string>
    <string name="dingdanwancheng">订单完成</string>
    <string name="NET_ERROR">网络异常</string>
    <string name="pai">派</string>
    <string name="order_follow">订单跟踪</string>
    <string name="onclickisexit">再点击退出应用</string>
    <string name="PLEASE_INPUT_AUTHCODE">请输入验证码</string>
    <string name="phone">手机</string>
    <string name="bind_phone">绑定手机</string>
    <string-array name="search_type">

        <item>全部</item>
        <item>合同号</item>
        <item>签收单号</item>

    </string-array>
    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>
    <string name="yundanhao">运单号</string>
    <string name="state">订单状态</string>
    <string name="orderdeails">订单详情</string>
    <string name="tihuo">提货</string>
    <string name="xiehuo">卸货</string>
    <string name="shiji_tihuo_time">实际提货时间</string>
    <string name="huowu">货物</string>
    <string name="yundan_state">运单状态</string>
    <string name="zhuanghuo_pic">装货照片</string>
    <string name="qianshou_pic">签收照片</string>
    <string name="baozhuangleixing">包装类型</string>
    <string name="jianshu">件数</string>
    <string name="zhongliang">重量（KG）</string>
    <string name="tiji">体积（m³）</string>
    <string name="jiazhi">价值（元）</string>
    <string name="ok">好</string>
    <string name="call_quanxian">没有授权拨打电话权限，请前往设置。</string>
    <string name="has_no_data">没有查到数据</string>
    <string name="loctiontime">定位时间:</string>
    <string name="yipaiche">已派车</string>
    <string name="fusiji">副司机:</string>
    <string name="zhusiji">主司机:</string>
    <string name="order">订单:</string>
    <string name="wu">无</string>
    <string name="xiehuozhappian">卸货照片</string>
    <string name="please_input_numbuter">请输入签收单/订单号搜索</string>
</resources>
