<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFCFBFB">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@drawable/default_background_edittext_gray_line_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jianshuxiangfu"
                android:textColor="@color/black_333"
                android:textSize="14sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:checked="true"
                    android:textColor="@color/black_333"
                    android:text="@string/shi"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/black_333"
                    android:layout_marginLeft="10dp"
                    android:text="@string/fou"/>
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baozhuangwanhao"
                android:textColor="@color/black_333"
                android:textSize="14sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:checked="true"
                    android:textColor="@color/black_333"
                    android:text="@string/shi"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/black_333"
                    android:layout_marginLeft="10dp"
                    android:text="@string/fou"/>
            </RadioGroup>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beizhu"
            android:layout_marginTop="20dp"
            android:textColor="@color/black_333"
            android:textSize="14sp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/default_background_edittext_gray_line_5"
            android:textSize="14sp"
            android:hint="备注"
            android:gravity="top"
            android:padding="5dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhuyishixiang"
            android:layout_marginTop="20dp"
            android:textColor="@color/black_333"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhuyishixiangdetails"
            android:layout_marginTop="5dp"
            android:textColor="@color/black_333"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line"
            android:layout_marginVertical="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qianzigaizhang"
            android:textColor="@color/black_333"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/tv_confirm"
            style="@style/btn_style"
            android:layout_margin="0dp"
            android:text="@string/sign_yinzhang"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shouhuoriqi"
                android:textColor="@color/black_333"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2017年8月25日"
                android:gravity="right"
                android:textColor="@color/black_333"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

</LinearLayout>