<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defautl_navigationbar_size"
        app:navigationIcon="@drawable/icon_back_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/againset_psd"
        android:textColor="@color/black_333"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:layout_marginLeft="24dp"
        android:text="@string/login_subtext"
        android:textColor="@color/black_333"
        android:textSize="10sp"/>

    <LinearLayout
        android:id="@+id/constraintLayout"
        style="@style/LinearLayout_style"
        android:layout_marginTop="60dp"
        android:paddingHorizontal="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_phone_black" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="5dp"
            android:textColor="@color/black_333"
            android:textSize="14sp"
            android:inputType="number"
            android:maxLength="11"
            android:hint="@string/please_input_phone"
            android:background="@null"/>


    </LinearLayout>
    <include
        layout="@layout/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="24dp"/>

    <LinearLayout
        style="@style/LinearLayout_style"
        android:paddingHorizontal="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_psd_black" />

        <EditText
            android:id="@+id/et_psd"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="5dp"
            android:textColor="@color/black_333"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:hint="@string/please_input_psd"
            android:background="@null"/>


    </LinearLayout>
    <include
        layout="@layout/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="24dp"/>
    <LinearLayout
        style="@style/LinearLayout_style"
        android:paddingHorizontal="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_psd_black" />

        <EditText
            android:id="@+id/et_psd_again"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="5dp"
            android:textColor="@color/black_333"
            android:textSize="14sp"
            android:text=""
            android:inputType="textPassword"
            android:hint="@string/please_input_psd_again"
            android:background="@null"/>


    </LinearLayout>
    <include
        layout="@layout/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="24dp"/>
    <LinearLayout
        style="@style/LinearLayout_style"
        android:paddingHorizontal="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_keyboard_black" />

        <EditText
            android:id="@+id/et_authcode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="5dp"
            android:textColor="@color/black_333"
            android:textSize="14sp"
            android:text=""
            android:inputType="textEmailAddress"
            android:hint="@string/please_input_authcode"
            android:background="@null"/>
        <TextView
            android:id="@+id/tv_authcode"
            style="@style/btn_style"
            android:layout_margin="0dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/get_authcode"
            android:enabled="false"
            android:background="@drawable/authcode_shape"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:textColor="@color/authcode_color" />

    </LinearLayout>
    <include
        layout="@layout/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="24dp"/>


    <TextView
        android:id="@+id/tv_confirm"
        style="@style/btn_style"
        android:layout_marginTop="8dp"
        android:text="@string/confirm"
        android:textColor="@color/white" />
</LinearLayout>